--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #security
 #spring.security.user.name=user
 #spring.security.user.password=password
+
+#jsp
+spring.mvc.view.prefix=/view/
+spring.mvc.view.suffix=.jsp
