--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/siga
 #Hibernate
 #data.sql não inseriu dados
 #spring.datasource.data=classpath*:data.sql
-spring.datasource.url=jdbc:mysql://localhost:3306/spring
+spring.datasource.url=jdbc:mysql://localhost:3306/spring?useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=carlos
 spring.datasource.password=Carlitos1989*
