--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.incrivel</groupId>
 	<artifactId>siga</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>siga</name>
 	<description>Sistema Integrado de Gestão Académica Spring Boot</description>
